syntax = "proto3";

package orchestrator;

import "google/protobuf/timestamp.proto";
import "common.proto";

option go_package = "github.com/substra/orchestrator/lib/asset";

message DataManager {
  string key = 1;
  string name = 2;
  string owner = 3;
  Permissions permissions = 4;
  Addressable description = 6;
  Addressable opener = 7;
  string type = 8;
  google.protobuf.Timestamp creation_date = 9;
  Permission logs_permission = 10;
  map <string, string> metadata = 16;
  bool archived = 17;
}

message NewDataManager {
  string key = 1;
  string name = 2;
  NewPermissions new_permissions = 3;
  Addressable description = 5;
  Addressable opener = 6;
  string type = 7;
  NewPermissions logs_permission = 8;
  map <string, string> metadata = 16;
}

message GetDataManagerParam {
  string key = 1;
}

message QueryDataManagersParam {
  string page_token = 1;
  uint32 page_size = 2;
}

message QueryDataManagersResponse {
  repeated DataManager data_managers = 1;
  string next_page_token = 2;
}

message UpdateDataManagerParam {
  string key = 1;
  string name = 2;
}

message ArchiveDataManagerParam {
  string key = 1;
  bool archived = 2;
}

message UpdateDataManagerResponse {}

message ArchiveDataManagerResponse {}

service DataManagerService {
  rpc RegisterDataManager(NewDataManager) returns (DataManager);
  rpc GetDataManager(GetDataManagerParam) returns (DataManager);
  rpc QueryDataManagers(QueryDataManagersParam) returns (QueryDataManagersResponse);
  rpc UpdateDataManager(UpdateDataManagerParam) returns (UpdateDataManagerResponse);
  rpc ArchiveDataManager(ArchiveDataManagerParam) returns (ArchiveDataManagerResponse);
}
