syntax = "proto3";

package orchestrator;

option go_package = "github.com/substra/orchestrator/lib/asset";

import "google/protobuf/timestamp.proto";

// DataSample represent a data sample that will be processed by a
// function to produce or test a model.
message DataSample {
  string key = 1;
  repeated string data_manager_keys = 2; // mutable
  string owner = 3;
  bool test_only = 4;
  string checksum = 5;
  google.protobuf.Timestamp creation_date = 6;
}

message NewDataSample {
  string key = 1;
  repeated string data_manager_keys = 2;
  bool test_only = 3;
  string checksum = 4;
}

message RegisterDataSamplesParam {
  repeated NewDataSample samples = 1;
}

message RegisterDataSamplesResponse {
    repeated DataSample data_samples = 1;
}

message UpdateDataSamplesParam {
  repeated string keys = 1;
  repeated string data_manager_keys = 2;
}

message UpdateDataSamplesResponse {}

message DataSampleQueryFilter {
  repeated string keys = 1;
}

message QueryDataSamplesParam {
  string page_token = 1;
  uint32 page_size = 2;
  DataSampleQueryFilter filter = 3;
}

message QueryDataSamplesResponse {
  repeated DataSample data_samples = 1;
  string next_page_token = 2;
}

message GetDataSampleParam {
  string key = 1;
}

service DataSampleService {
  rpc RegisterDataSamples(RegisterDataSamplesParam) returns (RegisterDataSamplesResponse);
  rpc UpdateDataSamples(UpdateDataSamplesParam) returns (UpdateDataSamplesResponse);
  rpc QueryDataSamples(QueryDataSamplesParam) returns (QueryDataSamplesResponse);
  rpc GetDataSample(GetDataSampleParam) returns (DataSample);
}
